--- a/simulation/resource/view/Settings.fxml
+++ b/simulation/resource/view/Settings.fxml
@@ -15,11 +15,17 @@ spacing="10">
         <URL value="@/css/settings.css"/>
     </stylesheets>
 
-
+    <HBox alignment="CENTER">
+        <VBox styleClass="textClass"><Text >Iterations</Text></VBox>
+        <TextField fx:id="iterations" text="1000"/>
+    </HBox>
     <HBox alignment="CENTER">
         <VBox styleClass="textClass"><Text > Board size</Text></VBox>
-
         <TextField fx:id="boardSize" text="10"/>
+    </HBox>
+    <HBox alignment="CENTER">
+        <VBox styleClass="textClass"><Text >initial plants number</Text></VBox>
+        <TextField fx:id="initialPlantsNo" text="30"/>
     </HBox>
     <HBox alignment="CENTER">
         <VBox styleClass="textClass"><Text>Mutation Standard Deviation</Text></VBox>
